Bite/AntlrGenerated/AntlrBiteParser/BITEParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from BITEParser.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace AntlrBiteParser {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class BITEParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		DeclareModule=1, DeclareClass=2, DeclareStruct=3, DeclareClassInstance=4, 
		AsKeyword=5, ExternModifier=6, CallableModifier=7, DeclareFunction=8, 
		DeclareVariable=9, DeclareGetter=10, DeclareSetter=11, DeclareForLoop=12, 
		DeclareWhileLoop=13, DeclareStatic=14, DeclareAbstract=15, DeclarePublic=16, 
		DeclarePrivate=17, ControlFlowIf=18, ControlFlowElse=19, FunctionReturn=20, 
		Break=21, NullReference=22, ThisReference=23, UsingDirective=24, ImportDirective=25, 
		StartStatement=26, UseStatement=27, ThreadStatement=28, SyncKeyword=29, 
		AssignOperator=30, PlusAssignOperator=31, MinusAssignOperator=32, MultiplyAssignOperator=33, 
		DivideAssignOperator=34, ModuloAssignOperator=35, BitwiseAndAssignOperator=36, 
		BitwiseOrAssignOperator=37, BitwiseXorAssignOperator=38, BitwiseLeftShiftAssignOperator=39, 
		BitwiseRightShiftAssignOperator=40, LogicalOrOperator=41, LogicalAndOperator=42, 
		UnequalOperator=43, EqualOperator=44, GreaterOperator=45, ShiftRightOperator=46, 
		GreaterEqualOperator=47, SmallerOperator=48, ShiftLeftOperator=49, SmallerEqualOperator=50, 
		MinusOperator=51, MinusMinusOperator=52, PlusOperator=53, PlusPlusOperator=54, 
		DivideOperator=55, MultiplyOperator=56, LogicalNegationOperator=57, DotOperator=58, 
		QuestionMarkOperator=59, ColonOperator=60, ReferenceOperator=61, ModuloOperator=62, 
		ComplimentOperator=63, BitwiseAndOperator=64, BitwiseXorOperator=65, BitwiseOrOperator=66, 
		OpeningRoundBracket=67, ClosingRoundBracket=68, SquareBracketLeft=69, 
		SquareBracketRight=70, CommaSeparator=71, SemicolonSeparator=72, DollarOperator=73, 
		BooleanLiteral=74, False_=75, True_=76, IntegerLiteral=77, FloatingLiteral=78, 
		DecimalLiteral=79, Identifier=80, COMMENT=81, WS=82, LINE_COMMENT=83, 
		DQUOTE=84, CURLY_L=85, CURLY_R=86, TEXT=87, BACKSLASH_PAREN=88, ESCAPE_SEQUENCE=89;
	public const int
		RULE_program = 0, RULE_module = 1, RULE_moduleDeclaration = 2, RULE_importDirective = 3, 
		RULE_usingDirective = 4, RULE_declaration = 5, RULE_classDeclaration = 6, 
		RULE_structDeclaration = 7, RULE_externalFunctionDeclaration = 8, RULE_functionDeclaration = 9, 
		RULE_classInstanceDeclaration = 10, RULE_variableDeclaration = 11, RULE_statements = 12, 
		RULE_statement = 13, RULE_exprStatement = 14, RULE_localVarDeclaration = 15, 
		RULE_localVarInitializer = 16, RULE_forInitializer = 17, RULE_forIterator = 18, 
		RULE_forStatement = 19, RULE_ifStatement = 20, RULE_returnStatement = 21, 
		RULE_breakStatement = 22, RULE_usingStatement = 23, RULE_startThreadStatement = 24, 
		RULE_useThreadStatement = 25, RULE_whileStatement = 26, RULE_syncBlock = 27, 
		RULE_block = 28, RULE_expression = 29, RULE_assignment = 30, RULE_lambdaExpression = 31, 
		RULE_ternary = 32, RULE_logicOr = 33, RULE_logicAnd = 34, RULE_bitwiseOr = 35, 
		RULE_bitwiseXor = 36, RULE_bitwiseAnd = 37, RULE_equality = 38, RULE_relational = 39, 
		RULE_shift = 40, RULE_additive = 41, RULE_multiplicative = 42, RULE_unary = 43, 
		RULE_call = 44, RULE_arrayExpression = 45, RULE_elementInitialization = 46, 
		RULE_dictionaryExpression = 47, RULE_primary = 48, RULE_memberInitialization = 49, 
		RULE_privateModifier = 50, RULE_publicModifier = 51, RULE_abstractModifier = 52, 
		RULE_staticModifier = 53, RULE_initializerExpression = 54, RULE_parameters = 55, 
		RULE_arguments = 56, RULE_inheritance = 57, RULE_callArguments = 58, RULE_elementAccess = 59, 
		RULE_elementIdentifier = 60, RULE_argumentExpression = 61, RULE_parametersIdentifier = 62, 
		RULE_string = 63, RULE_stringPart = 64;
	public static readonly string[] ruleNames = {
		"program", "module", "moduleDeclaration", "importDirective", "usingDirective", 
		"declaration", "classDeclaration", "structDeclaration", "externalFunctionDeclaration", 
		"functionDeclaration", "classInstanceDeclaration", "variableDeclaration", 
		"statements", "statement", "exprStatement", "localVarDeclaration", "localVarInitializer", 
		"forInitializer", "forIterator", "forStatement", "ifStatement", "returnStatement", 
		"breakStatement", "usingStatement", "startThreadStatement", "useThreadStatement", 
		"whileStatement", "syncBlock", "block", "expression", "assignment", "lambdaExpression", 
		"ternary", "logicOr", "logicAnd", "bitwiseOr", "bitwiseXor", "bitwiseAnd", 
		"equality", "relational", "shift", "additive", "multiplicative", "unary", 
		"call", "arrayExpression", "elementInitialization", "dictionaryExpression", 
		"primary", "memberInitialization", "privateModifier", "publicModifier", 
		"abstractModifier", "staticModifier", "initializerExpression", "parameters", 
		"arguments", "inheritance", "callArguments", "elementAccess", "elementIdentifier", 
		"argumentExpression", "parametersIdentifier", "string", "stringPart"
	};

	private static readonly string[] _LiteralNames = {
		null, "'module'", "'class'", "'struct'", "'new'", "'as'", "'extern'", 
		"'callable'", "'function'", "'var'", "'get'", "'set'", "'for'", "'while'", 
		"'static'", "'abstract'", "'public'", "'private'", "'if'", "'else'", "'return'", 
		"'break'", "'null'", "'this'", "'using'", "'import'", "'start'", "'use'", 
		"'thread'", "'sync'", "'='", "'+='", "'-='", "'*='", "'/='", "'%='", "'&='", 
		"'|='", "'^='", "'<<='", "'>>='", "'||'", "'&&'", "'!='", "'=='", "'>'", 
		"'>>'", "'>='", "'<'", "'<<'", "'<='", "'-'", "'--'", "'+'", "'++'", "'/'", 
		"'*'", "'!'", "'.'", "'?'", "':'", "'->'", "'%'", "'~'", "'&'", "'^'", 
		"'|'", "'('", "')'", "'['", "']'", "','", "';'", "'$'", null, "'false'", 
		"'true'", null, null, null, null, null, null, null, null, "'{'", "'}'", 
		null, "'${'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "DeclareModule", "DeclareClass", "DeclareStruct", "DeclareClassInstance", 
		"AsKeyword", "ExternModifier", "CallableModifier", "DeclareFunction", 
		"DeclareVariable", "DeclareGetter", "DeclareSetter", "DeclareForLoop", 
		"DeclareWhileLoop", "DeclareStatic", "DeclareAbstract", "DeclarePublic", 
		"DeclarePrivate", "ControlFlowIf", "ControlFlowElse", "FunctionReturn", 
		"Break", "NullReference", "ThisReference", "UsingDirective", "ImportDirective", 
		"StartStatement", "UseStatement", "ThreadStatement", "SyncKeyword", "AssignOperator", 
		"PlusAssignOperator", "MinusAssignOperator", "MultiplyAssignOperator", 
		"DivideAssignOperator", "ModuloAssignOperator", "BitwiseAndAssignOperator", 
		"BitwiseOrAssignOperator", "BitwiseXorAssignOperator", "BitwiseLeftShiftAssignOperator", 
		"BitwiseRightShiftAssignOperator", "LogicalOrOperator", "LogicalAndOperator", 
		"UnequalOperator", "EqualOperator", "GreaterOperator", "ShiftRightOperator", 
		"GreaterEqualOperator", "SmallerOperator", "ShiftLeftOperator", "SmallerEqualOperator", 
		"MinusOperator", "MinusMinusOperator", "PlusOperator", "PlusPlusOperator", 
		"DivideOperator", "MultiplyOperator", "LogicalNegationOperator", "DotOperator", 
		"QuestionMarkOperator", "ColonOperator", "ReferenceOperator", "ModuloOperator", 
		"ComplimentOperator", "BitwiseAndOperator", "BitwiseXorOperator", "BitwiseOrOperator", 
		"OpeningRoundBracket", "ClosingRoundBracket", "SquareBracketLeft", "SquareBracketRight", 
		"CommaSeparator", "SemicolonSeparator", "DollarOperator", "BooleanLiteral", 
		"False_", "True_", "IntegerLiteral", "FloatingLiteral", "DecimalLiteral", 
		"Identifier", "COMMENT", "WS", "LINE_COMMENT", "DQUOTE", "CURLY_L", "CURLY_R", 
		"TEXT", "BACKSLASH_PAREN", "ESCAPE_SEQUENCE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "BITEParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static BITEParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public BITEParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public BITEParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ModuleContext[] module() {
			return GetRuleContexts<ModuleContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ModuleContext module(int i) {
			return GetRuleContext<ModuleContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBITEParserVisitor<TResult> typedVisitor = visitor as IBITEParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 133;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==DeclareModule) {
				{
				{
				State = 130;
				module();
				}
				}
				State = 135;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ModuleContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ModuleDeclarationContext moduleDeclaration() {
			return GetRuleContext<ModuleDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(BITEParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ImportDirectiveContext[] importDirective() {
			return GetRuleContexts<ImportDirectiveContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ImportDirectiveContext importDirective(int i) {
			return GetRuleContext<ImportDirectiveContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UsingDirectiveContext[] usingDirective() {
			return GetRuleContexts<UsingDirectiveContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public UsingDirectiveContext usingDirective(int i) {
			return GetRuleContext<UsingDirectiveContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationContext[] declaration() {
			return GetRuleContexts<DeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationContext declaration(int i) {
			return GetRuleContext<DeclarationContext>(i);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_module; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBITEParserVisitor<TResult> typedVisitor = visitor as IBITEParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModule(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ModuleContext module() {
		ModuleContext _localctx = new ModuleContext(Context, State);
		EnterRule(_localctx, 2, RULE_module);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 136;
			moduleDeclaration();
			State = 141;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					State = 139;
					ErrorHandler.Sync(this);
					switch (TokenStream.LA(1)) {
					case ImportDirective:
						{
						State = 137;
						importDirective();
						}
						break;
					case UsingDirective:
						{
						State = 138;
						usingDirective();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				State = 143;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			}
			State = 147;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DeclareClass) | (1L << DeclareStruct) | (1L << ExternModifier) | (1L << CallableModifier) | (1L << DeclareFunction) | (1L << DeclareVariable) | (1L << DeclareForLoop) | (1L << DeclareWhileLoop) | (1L << DeclareStatic) | (1L << DeclareAbstract) | (1L << DeclarePublic) | (1L << DeclarePrivate) | (1L << ControlFlowIf) | (1L << FunctionReturn) | (1L << Break) | (1L << NullReference) | (1L << ThisReference) | (1L << UsingDirective) | (1L << StartStatement) | (1L << UseStatement) | (1L << SyncKeyword) | (1L << MinusOperator) | (1L << MinusMinusOperator) | (1L << PlusOperator) | (1L << PlusPlusOperator) | (1L << LogicalNegationOperator) | (1L << ComplimentOperator))) != 0) || ((((_la - 67)) & ~0x3f) == 0 && ((1L << (_la - 67)) & ((1L << (OpeningRoundBracket - 67)) | (1L << (SquareBracketLeft - 67)) | (1L << (BooleanLiteral - 67)) | (1L << (IntegerLiteral - 67)) | (1L << (FloatingLiteral - 67)) | (1L << (Identifier - 67)) | (1L << (DQUOTE - 67)) | (1L << (CURLY_L - 67)))) != 0)) {
				{
				{
				State = 144;
				declaration();
				}
				}
				State = 149;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 150;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ModuleDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DeclareModule() { return GetToken(BITEParser.DeclareModule, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Identifier() { return GetTokens(BITEParser.Identifier); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier(int i) {
			return GetToken(BITEParser.Identifier, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SemicolonSeparator() { return GetToken(BITEParser.SemicolonSeparator, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] DotOperator() { return GetTokens(BITEParser.DotOperator); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DotOperator(int i) {
			return GetToken(BITEParser.DotOperator, i);
		}
		public ModuleDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_moduleDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBITEParserVisitor<TResult> typedVisitor = visitor as IBITEParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModuleDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ModuleDeclarationContext moduleDeclaration() {
		ModuleDeclarationContext _localctx = new ModuleDeclarationContext(Context, State);
		EnterRule(_localctx, 4, RULE_moduleDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 152;
			Match(DeclareModule);
			State = 153;
			Match(Identifier);
			State = 158;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==DotOperator) {
				{
				{
				State = 154;
				Match(DotOperator);
				State = 155;
				Match(Identifier);
				}
				}
				State = 160;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 161;
			Match(SemicolonSeparator);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ImportDirectiveContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ImportDirective() { return GetToken(BITEParser.ImportDirective, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Identifier() { return GetTokens(BITEParser.Identifier); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier(int i) {
			return GetToken(BITEParser.Identifier, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SemicolonSeparator() { return GetToken(BITEParser.SemicolonSeparator, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] DotOperator() { return GetTokens(BITEParser.DotOperator); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DotOperator(int i) {
			return GetToken(BITEParser.DotOperator, i);
		}
		public ImportDirectiveContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_importDirective; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBITEParserVisitor<TResult> typedVisitor = visitor as IBITEParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitImportDirective(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ImportDirectiveContext importDirective() {
		ImportDirectiveContext _localctx = new ImportDirectiveContext(Context, State);
		EnterRule(_localctx, 6, RULE_importDirective);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 163;
			Match(ImportDirective);
			State = 164;
			Match(Identifier);
			State = 169;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==DotOperator) {
				{
				{
				State = 165;
				Match(DotOperator);
				State = 166;
				Match(Identifier);
				}
				}
				State = 171;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 172;
			Match(SemicolonSeparator);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UsingDirectiveContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UsingDirective() { return GetToken(BITEParser.UsingDirective, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Identifier() { return GetTokens(BITEParser.Identifier); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier(int i) {
			return GetToken(BITEParser.Identifier, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SemicolonSeparator() { return GetToken(BITEParser.SemicolonSeparator, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] DotOperator() { return GetTokens(BITEParser.DotOperator); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DotOperator(int i) {
			return GetToken(BITEParser.DotOperator, i);
		}
		public UsingDirectiveContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_usingDirective; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBITEParserVisitor<TResult> typedVisitor = visitor as IBITEParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUsingDirective(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UsingDirectiveContext usingDirective() {
		UsingDirectiveContext _localctx = new UsingDirectiveContext(Context, State);
		EnterRule(_localctx, 8, RULE_usingDirective);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 174;
			Match(UsingDirective);
			State = 175;
			Match(Identifier);
			State = 180;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==DotOperator) {
				{
				{
				State = 176;
				Match(DotOperator);
				State = 177;
				Match(Identifier);
				}
				}
				State = 182;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 183;
			Match(SemicolonSeparator);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
